changed INFO text

--- a/src/index.html
+++ b/src/index.html
@@ -581,11 +581,11 @@ Citizen of Kenya</textarea
           📨 Send Email Now
         </button>
 
-        <div class="info-box">
+        <!-- <div class="info-box">
           <strong>📋 Note:</strong> Your email will be sent directly via our
           secure Mailgun service to the selected government officials. You'll
           receive a confirmation once sent successfully.
-        </div>
+        </div> -->
       </div>
     </div>
 
